--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,171 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+  margin: auto;
+  padding-right: 875px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  min-height: 25vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #282c34;
+}
+
+.App-main {
+  background-color: #000000;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
+}
+
+.col-botones{
+  background-color: white;
+  margin: auto;
+  padding-left: 700px;
+  }
+
+.dos {
+  background-color: white;
+  color: #282c34;
+  padding: 0.63rem 2rem;
+  font-size: 1rem;
+  cursor: pointer;
+  outline: none;
+  border: none;
 }
 
 .App-link {
   color: #61dafb;
 }
+
+.fondo-shop {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding-inline-start: 50px;
+  padding: 20px 35px;
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(10px);
+  background-color: rgb(255, 255, 255);
+}
+
+.fondo-shop div{
+  margin: 100px 50px;
+  color: white;
+  transition: all 500ms;
+}
+
+.fondo-shop div h2,
+.fondo-shop div Button{
+  margin-top: 50px;
+}
+
+.fondo-shop h2{
+  font-weight: 200;
+  margin: auto;
+  margin-top: 15px;
+  margin-left: 90px;
+  font-size: 50px;
+}
+
+.fondo-shop Button{
+  margin: auto;
+  margin-left: -375px;
+  padding: 10px 40px;
+  border: 2px solid #fff;
+  background: transparent;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  color: white;
+  outline: none;
+  transform: all 300ms;
+  box-sizing: border-box;
+  display: block;
+}
+
+.title-shop{
+  margin: auto;
+  padding-left: 150px;
+}
+
+.fondo-product {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding-inline-start: 50px;
+  padding: 20px 35px;
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(10px);
+  background-color: rgba(182, 156, 156);
+}
+
+.fondo-product div Col,
+.fondo-product div Button{
+  margin-top: 400px;
+}
+
+.fondo-product p { 
+  margin: auto;
+  margin-top: 250px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.fondo-product Button {
+  margin: auto;
+  margin-left: -590px;
+  padding: 10px 40px;
+  border: 2px solid #fff;
+  background: transparent;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  color: white;
+  outline: none;
+  transform: all 300ms;
+  box-sizing: border-box;
+  display: block;
+}
+
+.primary {
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  border: none;
+  font-size: 0.875rem;
+  color: #ffffff;
+  font-weight: bold;
+  background-color: #bcd8c1;
+  width: 100%;
+  display: block;
+  padding: 0.875rem 1rem;
+  border-radius: 1.5rem;
+  box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
+  cursor: pointer;
+
+}
+  
+.card Button {
+
+  padding: 0.63rem 2rem;
+  font-size: 1rem;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +176,4 @@
     transform: rotate(360deg);
   }
 }
+
